@@ -7,6 +7,7 @@
     <groupId>vertx-fzdwx.cn</groupId>
     <artifactId>chat-serv</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -19,6 +20,8 @@
         <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
 
         <vertx.verticle>chat.vertx.ChatServ</vertx.verticle>
+        <vertx.plugin.version>1.0.22</vertx.plugin.version>
+        <failsafe.plugin.version>2.22.2</failsafe.plugin.version>
         <graal.version>20.3.0</graal.version>
     </properties>
 
@@ -45,29 +48,21 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <release>17</release>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>1.18.22</version>
+                        </path>
+                    </annotationProcessorPaths>
+                    <source>17</source>
+                    <target>17</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.graalvm.nativeimage</groupId>
-                <artifactId>native-image-maven-plugin</artifactId>
-                <version>${graal.version}</version>   <!--(1)-->
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>native-image</goal>
-                        </goals>
-                        <phase>package</phase>
-                    </execution>
-                </executions>
-                <configuration>
-                    <imageName>${project.name}</imageName>    <!--(2)-->
-                    <mainClass>${vertx.verticle}</mainClass>  <!--(3)-->
-                    <buildArgs>-H:+PrintClassInitialization -H:+ReportExceptionStackTraces</buildArgs> <!--(4)-->
-                </configuration>
+                <version>3.8.1</version>
             </plugin>
         </plugins>
     </build>
